--- a/src/static/css/application.css
+++ b/src/static/css/application.css
@@ -1,12 +1,12 @@
 /* global body padding */
 body {
-  padding-top:    20px;
+  padding-top:    2%;
   padding-bottom: 20px;
 }
 
 @media (min-width: 768px) {
   body {
-    padding-top:    50px;
+    padding-top:    2%;
     padding-bottom: 50px;
   }
 }
