--- a/src/static/css/toolkit-inverse.css
+++ b/src/static/css/toolkit-inverse.css
@@ -5056,6 +5056,7 @@ button.close {
 .modal-body {
   position: relative;
   padding: 15px;
+  background: #252830;
 }
 .modal-footer {
   padding: 15px;
